--- a/package.json
+++ b/package.json
@@ -16,36 +16,40 @@
     "model-pipeline:run": "node scripts/model-pipeline.js"
   },
   "devDependencies": {
+    "@dimforge/rapier3d-compat": "^0.11.2",
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@theatre/core": "^0.7.0",
+    "@theatre/studio": "^0.7.0",
+    "@threlte/core": "^7.0.12",
+    "@threlte/extras": "^8.7.3",
+    "@threlte/flex": "^1.0.1",
+    "@threlte/rapier": "^2.0.0",
+    "@threlte/theatre": "^2.1.6",
+    "@threlte/xr": "^0.1.2",
     "@types/eslint": "8.56.0",
+    "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.159.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
-    "vitest": "^1.2.0",
-    "three": "^0.159.0",
-    "@threlte/core": "^7.0.12",
-    "@types/three": "^0.159.0",
-    "@threlte/extras": "^8.7.3",
-    "@threlte/rapier": "^2.0.0",
-    "@dimforge/rapier3d-compat": "^0.11.2",
-    "@threlte/theatre": "^2.1.6",
-    "@theatre/core": "^0.7.0",
-    "@theatre/studio": "^0.7.0",
-    "@threlte/xr": "^0.1.2",
     "vite-plugin-mkcert": "^1.17.3",
-    "@threlte/flex": "^1.0.1"
+    "vitest": "^1.2.0"
   },
   "type": "module"
 }
