added physics and reactive html content

--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "vite-plugin-mkcert": "^1.17.3",
     "vitest": "^1.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
