Added physics stuff

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CtUltbh1.js",
+    "file": "_app/immutable/entry/app.Dm3qu3ni.js",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
       "_scheduler.C0bs57FV.js",
-      "_index.BUyZdqt5.js"
+      "_index.DS5UkMoq.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -14,58 +14,58 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DQ1Z1htc.js",
+    "file": "_app/immutable/nodes/0.BsepZjka.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_scheduler.C0bs57FV.js",
-      "_index.BUyZdqt5.js"
+      "_index.DS5UkMoq.js"
     ],
     "css": [
-      "_app/immutable/assets/0.iAfsnpVR.css"
+      "_app/immutable/assets/0.BtAvt2Mu.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.D5ZoPVDo.js",
+    "file": "_app/immutable/nodes/1.Vh4Y9RtU.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_scheduler.C0bs57FV.js",
-      "_index.BUyZdqt5.js",
-      "_entry.CTx0-UbM.js"
+      "_index.DS5UkMoq.js",
+      "_entry.wzEf5Ryn.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.lwzC_rQ1.js",
+    "file": "_app/immutable/nodes/2.CaJRhXtI.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_scheduler.C0bs57FV.js",
-      "_index.BUyZdqt5.js",
-      "_paths.DKVym3Ib.js"
+      "_index.DS5UkMoq.js",
+      "_paths.B5S0hZNg.js"
     ],
     "css": [
       "_app/immutable/assets/2.D3bcCndt.css"
     ]
   },
-  "_entry.CTx0-UbM.js": {
-    "file": "_app/immutable/chunks/entry.CTx0-UbM.js",
+  "_entry.wzEf5Ryn.js": {
+    "file": "_app/immutable/chunks/entry.wzEf5Ryn.js",
     "imports": [
       "_scheduler.C0bs57FV.js",
-      "_paths.DKVym3Ib.js"
+      "_paths.B5S0hZNg.js"
     ]
   },
-  "_index.BUyZdqt5.js": {
-    "file": "_app/immutable/chunks/index.BUyZdqt5.js",
+  "_index.DS5UkMoq.js": {
+    "file": "_app/immutable/chunks/index.DS5UkMoq.js",
     "imports": [
       "_scheduler.C0bs57FV.js"
     ]
   },
-  "_paths.DKVym3Ib.js": {
-    "file": "_app/immutable/chunks/paths.DKVym3Ib.js",
+  "_paths.B5S0hZNg.js": {
+    "file": "_app/immutable/chunks/paths.B5S0hZNg.js",
     "imports": [
       "_scheduler.C0bs57FV.js"
     ]
@@ -74,11 +74,11 @@
     "file": "_app/immutable/chunks/scheduler.C0bs57FV.js"
   },
   "node_modules/.pnpm/@sveltejs+kit@2.5.0_@sveltejs+vite-plugin-svelte@3.0.2_svelte@4.2.10_vite@5.1.1/node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BH3QesJM.js",
+    "file": "_app/immutable/entry/start.DDdJCU7q.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@2.5.0_@sveltejs+vite-plugin-svelte@3.0.2_svelte@4.2.10_vite@5.1.1/node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_entry.CTx0-UbM.js"
+      "_entry.wzEf5Ryn.js"
     ]
   }
 }
