--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tute-threlte",
+  "name": "threlte-sequencer",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -53,6 +53,7 @@
   },
   "type": "module",
   "dependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "tone": "^14.7.77"
   }
 }
